# handler/response.go
@@ -36,3 +36,7 @@ type DeleteOpeningResponse struct {
 	Message string `json:"message"`
 	Data 	schemas.OpeningResponse `json:"data"`
 }
+type ShowOpeningResponse struct {
+	Message string `json:"message"`
+	Data 	schemas.OpeningResponse `json:"data"`
+}
