# handler/showOpening.go
@@ -7,6 +7,17 @@ import (
 	"github.com/renatocardoso243/gopportunities.git/schemas"
 )
 
+// @BasePath /api/v1
+// @Sumary Show opening
+// @Description Show a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identifation"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
